# taxi_cab_ETL

./: .gitignore  Makefile  README.md  demand_analysis.py  efficiency.py  pyproject.toml  requirements.txt  taxi.json
outputs/: day_of_week_aggregation.csv  efficiency_taxi_data.csv  hourly_aggregation.csv
